--- a/1.7.10/build.gradle
+++ b/1.7.10/build.gradle
@@ -18,8 +18,8 @@ buildscript {
 apply plugin: 'forge'
 
 version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+group= "net.ciebus.pinmod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "pin"
 
 minecraft {
     version = "1.7.10-10.13.4.1558-1.7.10"
