--- a/1.7.10/build.gradle
+++ b/1.7.10/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         maven {
             name = "forge"
             url = "https://files.minecraftforge.net/maven"
@@ -11,7 +11,9 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.anatawa12.forge:ForgeGradle:1.2-1.0.0'
+        classpath('com.anatawa12.forge:ForgeGradle:1.2-1.0.+') {
+            changing = true
+        }
     }
 }
 
